        LINKTYPE_I2C_LINUX/DLT_I2C_LINUX, as it's really just an
        encapsulation of I2C, and is also being used for HDMI DDC.
        Keep DLT_IPMB_LINUX around as a #define for backwards
        compatibility.
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
      Deprecate pcap_compile_nopcap().
    Savefiles:
      Reject pcap files where one of the reserved fields in the
        "link-layer type plus other stuff" is non-zero.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
    Documentation:
      Document a standard format for writing out BPF filter programs.
      Explain "other addresses" in pcap_findalldevs(3PCAP).
      Add a README.hurd.md file.
      Document pcap_lookupnet(3PCAP) a bit better.
    Building and testing:
      Apply GNU Hurd support patch from the Debian package.
      CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
      Remove all remaining support for AOS (4.3BSD Unix), BSD/OS, DOS,
        HP-UX before 10.20, IRIX, {OSF/1, Digital Unix, Tru64 Unix}, SINIX,
        SunOS 3.x, 4.x and 5.x before 5.3.2, and Ultrix.
      Add a new test program for pcap_activate().
      Make NetBSD build warning-free.
      Make Sun C build warning-free.
      Make FreeBSD, Linux and macOS builds warning-free.
      Print MAC addresses in findalldevstest.
      When necessary, trust the OS to implement ffs().
      Fix HCI_CHANNEL_MONITOR detection with musl libc.
      At build time require a proof of suitable snprintf(3) implementation in
        libc (and document Solaris 9 and MinGW as unsupported because of that).
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
    BSD, macOS, AIX, Solaris 11, Linux:
      Add a new error PCAP_ERROR_CAPTURE_NOTSUP, for use if a capture