@@ -28,6 +28,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Add support for Block Ack Req and Block Ack frame types (pull
         request #1039).
       Deprecate pcap_compile_nopcap().
+      Add support for filtering packets encapsulated with VXLAN (pull
+        request #1273).
     Savefiles:
       Reject pcap files where one of the reserved fields in the
         "link-layer type plus other stuff" is non-zero.
